--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "quasar": "^2.0.0",
     "socket.io-client": "^4.5.1",
     "vue": "^3.0.0",
+    "vue-json-excel3": "^0.0.3",
     "vue-router": "^4.0.0",
     "vue-yandex-maps": "^0.12.3",
     "vuex": "^4.0.1"
