--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "moment": "^2.29.4",
     "quasar": "^2.0.0",
     "socket.io-client": "^4.5.1",
+    "sortablejs": "^1.15.0",
     "vue": "^3.0.0",
     "vue-json-excel3": "^0.0.3",
     "vue-router": "^4.0.0",
     "vue-yandex-maps": "^0.12.3",
-    "vuex": "^4.0.1"
+    "vuex": "^4.0.1",
+    "ymaps": "^0.2.1"
   },
   "devDependencies": {
     "@quasar/app": "^3.0.0"
