--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "@vuepic/vue-datepicker": "^3.4.6",
+    "apexcharts": "^3.37.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "moment": "^2.29.4",
+    "moment-weekday-calc": "^1.1.4",
     "quasar": "^2.0.0",
     "socket.io-client": "^4.5.1",
     "sortablejs": "^1.15.0",
@@ -21,6 +23,7 @@
     "vue-json-excel3": "^0.0.3",
     "vue-router": "^4.0.0",
     "vue-yandex-maps": "^0.12.3",
+    "vue3-apexcharts": "^1.4.1",
     "vuex": "^4.0.1",
     "ymaps": "^0.2.1"
   },
