migrate to vite

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
   "recommendations": [
     "editorconfig.editorconfig",
-    "johnsoncodehk.volar",
+    "vue.volar",
     "wayou.vscode-todo-highlight"
   ],
   "unwantedRecommendations": [
