--- a/package.json
+++ b/package.json
@@ -2,47 +2,39 @@
   "name": "atu-mmk",
   "version": "0.0.1",
   "description": "Автотранспортное управление",
-  "productName": "Автотранспортное Управление",
-  "author": "Кольба Юрий",
+  "productName": "Автотранспортное управление",
+  "author": "USC TEAM",
   "private": true,
   "scripts": {
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "dev": "quasar dev",
+    "build": "quasar build"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
-    "@vuepic/vue-datepicker": "^3.4.6",
-    "apexcharts": "^3.37.0",
-    "axios": "^0.21.1",
-    "core-js": "^3.6.5",
+    "@vuepic/vue-datepicker": "^4.5.1",
+    "apexcharts": "^3.40.0",
+    "axios": "^1.2.1",
     "moment": "^2.29.4",
     "moment-weekday-calc": "^1.1.4",
-    "quasar": "^2.0.0",
-    "socket.io-client": "^4.5.1",
+    "quasar": "^2.6.0",
+    "socket.io-client": "^4.6.1",
     "sortablejs": "^1.15.0",
     "vue": "^3.0.0",
-    "vue-json-excel3": "^0.0.3",
+    "vue-json-excel3": "0.0.7",
     "vue-router": "^4.0.0",
-    "vue-yandex-maps": "^0.12.3",
+    "vue-yandex-maps": "^0.12.7",
     "vue3-apexcharts": "^1.4.1",
     "vuex": "^4.0.1",
     "ymaps": "^0.2.1"
   },
   "devDependencies": {
-    "@quasar/app": "^3.0.0"
+    "@quasar/app-vite": "^1.0.0",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.14"
   },
-  "browserslist": [
-    "last 10 Chrome versions",
-    "last 10 Firefox versions",
-    "last 4 Edge versions",
-    "last 7 Safari versions",
-    "last 8 Android versions",
-    "last 8 ChromeAndroid versions",
-    "last 8 FirefoxAndroid versions",
-    "last 10 iOS versions",
-    "last 5 Opera versions"
-  ],
   "engines": {
-    "node": ">= 12.22.1",
+    "node": "^18 || ^16 || ^14.19",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
   }
