migrate to dayjs

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@vuepic/vue-datepicker": "^4.5.1",
     "apexcharts": "^3.40.0",
     "axios": "^1.2.1",
-    "moment": "^2.29.4",
-    "moment-weekday-calc": "^1.1.4",
+    "dayjs": "^1.11.7",
     "quasar": "^2.6.0",
     "socket.io-client": "^4.6.1",
     "sortablejs": "^1.15.0",
