--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-router": "^4.0.0",
     "vue-yandex-maps": "^0.12.7",
     "vuex": "^4.0.1",
+    "vuex-extensions": "^4.0.0",
     "ymaps": "^0.2.1"
   },
   "devDependencies": {
