--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vuepic/vue-datepicker": "^4.5.1",
     "axios": "^1.2.1",
     "dayjs": "^1.11.7",
+    "lodash": "^4.17.21",
     "quasar": "^2.6.0",
     "socket.io-client": "^4.6.1",
     "sortablejs": "^1.15.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.0.0",
+    "@types/lodash": "^4.14.202",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.14"
   },
